--- a/index.html
+++ b/index.html
@@ -6,14 +6,25 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <title>Portfólio - Desengner e Desenvolvedora</title>
 </head>
+<style>
+nav.navbar.navbar-expand-lg.navbar-light {
+    position: absolute;
+    background: white;
+    width: 70%;
+    margin: 3% 15%;
+    padding: 15px;
+    border-radius: 12px;
+}
+
+</style>
 <body>
     <div class="">
         <!-- <h1>Portfólio Designer de Aplicações.</h1> -->
         <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container-fluid">
               <a class="navbar-brand" href="#">
-                <img src="assets/img/marianoaraujo-2.png" alt="" width="30px" class="img-fluid">  
-                Thais Mariano</a>
+                <img src="assets/img/marianoaraujo-2.png" alt="" width="30px" class="img-fluid">
+              </a>
               <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -32,21 +43,24 @@
                     <a class="nav-link" href="#">Fale Comigo</a>
                     <!-- <span> +55 (12)98317-9078 </span> -->
                   </li>
-                  <li class="nav-item mr-3">
-                        <a href="https://www.linkedin.com/in/thais-mariano-3657881b6/" target="_blank" class=""><img src="assets/img/linkedin.png" alt="" width="20px" class=""></a>
-                     </li>
-                     <li class="nav-item mr-3">
-                        <a href="https://github.com/ThaisMariano30" target="_blank" class=""><img src="assets/img/github.png" alt="" width="20px" class=""></a>
-                     </li>
-                     <li class="nav-item">
-                        <a href="https://wa.me/+5512983179078?text=" target="_blank" class=""><img src="assets/img/whatsapp.png" alt="" width="30px" class=""></a>
+                   <li class="nav-items">
+                      <a href="https://www.linkedin.com/in/thais-mariano-3657881b6/" target="_blank"  class="text-decoration-none">
+                        <img src="assets/img/linkedin.png" alt="" width="20px">
+                      </a>
+                      <a href="https://github.com/ThaisMariano30" target="_blank"  class="text-decoration-none">
+                        <img src="assets/img/github.png" alt="" width="20px" height="20px" >
+                      </a>
+                      <a href="https://wa.me/+5512983179078?text=" target="_blank"  class="text-decoration-none">
+                        <img src="assets/img/whatsapp.png" alt="" width="30px" >
+                      </a>
                      </li>
                 </ul>
                 
               </div>
             </div>
           </nav>
-        <img src="assets/img/banner_1.jpg" class="img-fluid" alt="banner_imagem">
+        <img src="assets/img/banner-02.jpg" class="img-fluid position-absolute" alt="banner_imagem">
+        <p class="display-1"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Display 1</font></font></p>
     </div>
     
 
@@ -60,4 +74,4 @@
 
 <!-- Production version -->
 <script src="https://unpkg.com/@popperjs/core@2"></script>
-</html>l
+</html>
