--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,8 +11,8 @@
 nav.navbar.navbar-expand-lg.navbar-light {
     position: absolute;
     background: white;
-    width: 70%;
-    margin: 3% 15%;
+    width: 85%;
+    margin: 3% 8%;
     padding: 15px;
     border-radius: 12px;
 }
@@ -59,8 +60,13 @@ nav.navbar.navbar-expand-lg.navbar-light {
               </div>
             </div>
           </nav>
-        <img src="assets/img/banner-02.jpg" class="img-fluid position-absolute" alt="banner_imagem">
-        <p class="display-1"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Display 1</font></font></p>
+        <img src="assets/img/banner-02.jpg" class="img-fluid position-absolute" alt="banner_imagem" style="z-index: -2;">
+        <div class="container">
+          
+          <hr><p class="display-1 text-light"><font style="vertical-align: inherit;"><font style="top:40vh;position: relative;vertical-align: inherit;">Designer Gráfico e Desenvolvedora de Aplicações Resposivas.</font></font></p>
+          <p>
+          </p>
+        </div>
     </div>
     
 
@@ -68,10 +74,8 @@ nav.navbar.navbar-expand-lg.navbar-light {
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js" integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj" crossorigin="anonymous"></script>
 <!-- Development version -->
-<script src="https://unpkg.com/@popperjs/core@2/dist/umd/popper.js"></script>
 
 <!-- Production version -->
-<script src="https://unpkg.com/@popperjs/core@2"></script>
+
 </html>
