--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ nav.navbar.navbar-expand-lg.navbar-light {
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="#">Fale Comigo</a>
-                    <!-- <span> +55 (12)98317-9078 </span> -->
+                    <!-- <span> +55 (11)91045-1115 </span> -->
                   </li>
                    <li class="nav-items">
                       <a href="https://www.linkedin.com/in/thais-mariano-3657881b6/" target="_blank"  class="text-decoration-none">
@@ -52,7 +52,7 @@ nav.navbar.navbar-expand-lg.navbar-light {
                       <a href="https://github.com/ThaisMariano30" target="_blank"  class="text-decoration-none">
                         <img src="assets/img/github.png" alt="" width="20px" height="20px" >
                       </a>
-                      <a href="https://wa.me/+5512983179078?text=" target="_blank"  class="text-decoration-none">
+                      <a href="https://wa.me/+5511910451115?text=" target="_blank"  class="text-decoration-none">
                         <img src="assets/img/whatsapp.png" alt="" width="30px" >
                       </a>
                      </li>
@@ -67,8 +67,19 @@ nav.navbar.navbar-expand-lg.navbar-light {
         
         <div class="container curriculo">
           <p class="display-1 text-light position-relative"><font style="vertical-align: inherit;"><font style= "position: relative;vertical-align: inherit;">Designer Gráfico e Desenvolvedora de Aplicações Resposivas.</font></font></p>
-          <hr class="text-white">
-        <div class="container">
+          <div class="container redes-sociais">
+            <a href="https://www.linkedin.com/in/thais-mariano-3657881b6/" target="_blank"  class="text-decoration-none">
+              <img src="assets/img/linkedin-iconwhite.png" alt="" width="20px" height="20px" >
+            </a>
+              <a href="https://wa.me/+5511910451115?text=" target="_blank"  class="text-decoration-none">
+                <img src="assets/img/whatsapp-iconwhite.png" alt="" width="20px" height="20px" >
+            </a>
+                <a href="https://github.com/ThaisMariano30" target="_blank"  class="text-decoration-none">
+                  <img src="assets/img/github-iconwhite.png" alt="" width="20px" height="20px" >
+            </a>
+          </div>
+          <hr class="text-white mt-5">
+        <div class="container mt-5">
             <div class="row">
               <div class="col-3">
                 <h2 class="text-white fw-normal">Faça download do meu CV.</h2>
