--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 
 
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -122,33 +123,35 @@
         <footer>
           <div class="container p-5">
             <div class="row">
-              <div class="col-xs-12 text-center">
+              <div class="col-xs-12 text-center mb-4">
                 <img src="assets/img/marianoaraujo-2.png" class="img" alt="banner_imagem" style="z-index: -2; max-width: 32px;">
               </div>
 
-              <div class="col-xs-12"><h4>Utilitários</h4>
+              <div class="col-xs-12 d-none d-block"><h4>Utilitários</h4>
                 <ul class="list-group">
-                  <a class="link fw-normal text-decoration-none list-group-item border-0" aria-current="page"><a class="link fw-normal text-decoration-none" aria-current="page" href="#">Home</a></li>
-                  <a class="link fw-normal text-decoration-none list-group-item border-0" aria-current="page"><a class="link fw-normal text-decoration-none" aria-current="page" href="#">Sobre Mim</a></li>
-                  <a class="link fw-normal text-decoration-none list-group-item border-0" aria-current="page"><a class="link fw-normal text-decoration-none" aria-current="page" href="#">Skills</a></li>
-                  <a class="link fw-normal text-decoration-none list-group-item border-0" aria-current="page"><a class="link fw-normal text-decoration-none" aria-current="page" href="#">Portfólio</a></li>
-                  <a class="link fw-normal text-decoration-none list-group-item border-0" aria-current="page"><a class="link fw-normal text-decoration-none" aria-current="page" href="#">Follow</a></li>
-                  <a class="link fw-normal text-decoration-none list-group-item border-0" aria-current="page"><a class="link fw-normal text-decoration-none" aria-current="page" href="#">Social Media</a></li>
+                  <a class="link text-dark fw-normal text-decoration-none list-group-item border-0" aria-current="page"><a class="link fw-normal text-decoration-none" aria-current="page" href="#">Home</a></li>
+                  <a class="link text-dark fw-normal text-decoration-none list-group-item border-0" aria-current="page"><a class="link fw-normal text-decoration-none" aria-current="page" href="#">Sobre Mim</a></li>
+                  <a class="link text-dark fw-normal text-decoration-none list-group-item border-0" aria-current="page"><a class="link fw-normal text-decoration-none" aria-current="page" href="#">Skills</a></li>
+                  <a class="link text-dark fw-normal text-decoration-none list-group-item border-0" aria-current="page"><a class="link fw-normal text-decoration-none" aria-current="page" href="#">Portfólio</a></li>
+                  <a class="link text-dark fw-normal text-decoration-none list-group-item border-0" aria-current="page"><a class="link fw-normal text-decoration-none" aria-current="page" href="#">Follow</a></li>
+                  <a class="link text-dark fw-normal text-decoration-none list-group-item border-0" aria-current="page"><a class="link fw-normal text-decoration-none" aria-current="page" href="#">Social Media</a></li>
                 </ul>
               </div>
-              <div class="col-xs-12"><h4>Contato</h4>
+              <div class="col-xs-12 text-center">
+                <h4>Contato</h4>
                 <ul class="list-group">
-                  <li class="list-group-item border-0"><a class="link fw-normal text-decoration-none" aria-current="page" href="#">Home</a></li>
-                  <li class="list-group-item border-0"><a class="link fw-normal text-decoration-none" aria-current="page" href="#">Sobre Mim</a></li>
-                  <li class="list-group-item border-0"><a class="link fw-normal text-decoration-none" aria-current="page" href="#">Skills</a></li>
-                  <li class="list-group-item border-0"><a class="link fw-normal text-decoration-none" aria-current="page" href="#">Portfólio</a></li>
-                  <li class="list-group-item border-0"><a class="link fw-normal text-decoration-none" aria-current="page" href="#">Fale Com</a></li>
+                  <li class="list-group-item border-0"><a class="link text-dark fw-normal text-decoration-none" aria-current="page" href="#">Home</a></li>
+                  <li class="list-group-item border-0"><a class="link text-dark fw-normal text-decoration-none" aria-current="page" href="#">Sobre Mim</a></li>
+                  <li class="list-group-item border-0"><a class="link text-dark fw-normal text-decoration-none" aria-current="page" href="#">Skills</a></li>
+                  <li class="list-group-item border-0"><a class="link text-dark fw-normal text-decoration-none" aria-current="page" href="#">Portfólio</a></li>
+                  <li class="list-group-item border-0"><a class="link text-dark fw-normal text-decoration-none" aria-current="page" href="#">Fale Com</a></li>
                 </ul>
               </div>
 
-              <div class="col-xs-12"><h4>Social Media</h4>
+              <div class="col-xs-12 text-center mt-4">
+                <h4>Social Media</h4>
                 <ul class="list-group">
-                  <li class="nav-items pt-2">
+                  <li class="list-group-item text-center border-0 pt-2">
                     <a href="https://www.linkedin.com/in/thais-mariano-3657881b6/" target="_blank"  class="text-decoration-none">
                       <img src="assets/img/linkedin.png" alt="" width="20px" height="20px">
                     </a>
@@ -161,7 +164,7 @@
                    </li>  
                 </ul>
               </div>
-              <hr class="text-white text-center">
+              <hr class="text-dark text-center mt-2">
               
             </div>
           </div>
