--- a/index.html
+++ b/index.html
@@ -1,7 +1,4 @@
 
-
-
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -85,13 +82,13 @@
           <hr class="text-white">
         <div class="container mt-5">
             <div class="row">
-              <div class="col-xs-12 col-md-6">
+              <div class="col-xs-12 col-md-6 col-sm-12 col-lg-12 col-xl-12 col-xll-12">
                 <h3 class="text-white fw-normal">Faça download do meu CV.</h3>
               </div>
-              <div class="col-xs-3 col-md-3">
+              <div class="col-xs-3 col-md-3 col-sm-12 col-lg-12 col-xl-12 col-xll-12">
                 <h4 class="text-white">2020.</h4>
               </div>
-              <div class="col-xs-3 col-md-3 text-center">
+              <div class="col-xs-3 col-md-3 col-sm-12 col-lg-12 col-xl-12 col-xll-12 text-center">
                 <a href="assets/img/Curriculo_Design-Thais-convertido.pdf" target="_blank"  class="text-decoration-none">
                   <img src="assets/img/icons8-download-from-the-cloud-48.png" alt="" width="30px" height="30px" >
                 </a>  
@@ -101,25 +98,76 @@
          </div>
         </section>
         <!-- Portfólio -->
-        <section>
+        <section style="background: black;">
           <div class="container portfólio" style="min-width:  100%;">
             <div class="row">
-              <div class="col-md-4 p-0">
+              <div class="col-xs-12 col-md-4 col-sm-4 col-lg-4 col-xl-4 col-xll-4 p-0">
                 <img src="assets/img/thaismarianoportfólio-02.png" class="img-fluid" alt="banner_imagem" style="z-index: -2;">
               </div>
               
-              <div class="col-md-4 p-0">
+              <div class="col-xs-12 col-md-4 col-sm-4 col-lg-4 col-xl-4 col-xll-4 p-0">
                 <img src="assets/img/thaismarianoportfólio-03.png" class="img-fluid" alt="banner_imagem" style="z-index: -2;">
               </div>
 
-              <div class="col-md-4 p-0">
+              <div class=" col-xs-12 col-md-4 col-sm-4 col-lg-4 col-xl-4 col-xll-4 p-0">
                 <img src="assets/img/thaismarianoportfólio-02.png" class="img-fluid" alt="banner_imagem" style="z-index: -2;">
               </div>
 
             </div>
 
-
           </div>
+        <div style="color: black;" class="container aboute">
+          <div class="row">
+            <!-- coluna sobre mim -->
+            <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 col-xl-6 col-xll-6">
+              <div class="row">
+                <h5 class="text-white mt-5">
+                  About Me
+                </h5>
+                <p class="text-white">
+                  Clara em qualquer aspecto
+                  Objetiva em minhas funções
+                  Busco o famoso frio na barriga
+                  Exercendo minha profissão.
+                  Sentir essa sensação de
+                  Euforia quando estiver criando
+                  E desenvolvendo. Com características
+                  Descritas como; comunicativa, bem-humorada, criativa e descontraída.
+
+                </p>
+              </div>
+            </div>
+            <!-- coluna carousel  -->
+            <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 col-xl-6 col-xll-6">
+              <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                <ol class="carousel-indicators">
+                  <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                  <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                  <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                </ol>
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img src="assets/img/thaismarianoportfólio-02.png" class="d-block w-100" alt="...">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="assets/img/thaismarianoportfólio-03.png" class="d-block w-100" alt="...">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="assets/img/thaismarianoportfólio-02.png" class="d-block w-100" alt="...">
+                  </div>
+                </div>
+                <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="sr-only">Next</span>
+                </a>
+              </div>    
+            </div>
+          </div>
+        </div>
         </section>
         <footer style="background-color: black;"> 
           
@@ -185,6 +233,9 @@
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js" integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
 <!-- Development version -->
 
 <!-- Production version -->
